[package]
name = "keypress"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]

[features]
default = []
generate = []

[dependencies]
log = "0.4.3"
env_logger = "0.5.12"

winapi = { version = "0.3.5", features=["winuser", "errhandlingapi"] }
toml = "0.4.6"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.24"
tungstenite = "0.6.0"
crossbeam-channel = "0.2.4"
